对6个问题进行逐一修复
